# ffn

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  Makefile  README.md  README.rst  custom.css  ffn.html  genindex.html  index.html  install.html  intro.html  intro.py  intro_evaluated.ipynb  modules.html  objects.inv  py-modindex.html  pyproject.toml  quick.html  quickstart.html  quickstart.ipynb  quickstart.py  quickstart_evaluated.ipynb  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  deploy.yaml  deploy.yml  regression.yaml  regression.yml
_modules/: index.html
_modules/ffn/: core.html  data.html  utils.html
_modules/klink/: __init__.html  demo.html
_sources/: ffn.txt  index.rst.txt  index.txt  install.rst.txt  install.txt  intro.rst.txt  intro.txt  quick.txt  quickstart.rst.txt  quickstart.txt
_sources/_themes/klink/docs/source/: index.txt
_static/: documentation_options.js
_static/css/: klink.css
_static/less/: .klink.less.swp  klink.less
_themes/klink/: README.html
_themes/klink/docs/source/: examples.html  index.html  install.html  intro.html  klink.html  nb-examples.html
docs/: Makefile  deploy  make.bat  test
docs/source/: conf.py  ffn.rst  index.rst  install.rst  intro.ipynb  modules.rst  quickstart.ipynb  test_data.csv
docs/source/.ipynb_checkpoints/: intro-checkpoint.ipynb
docs/source/_themes/klink/: layout.html
docs/source/_themes/klink/klink/: __init__.py
docs/source/_themes/klink/klink/static/css/: klink.css
docs/source/_themes/klink/static/: update_css
docs/source/_themes/klink/static/css/: klink.css
ffn/: __init__.py  core.py  data.py  finance.py  utils.py
klink/: __init__.py  layout.html
klink/less/: klink.less
tests/: test_core.py  test_data.py  test_finance.py  test_utils.py
tests/data/: test_data.csv
