[build-system]
requires = [
    "oldest-supported-numpy",
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "ffn"
description = "Financial functions for Python"
version = "1.1.3"
readme = "README.md"
license = { file = "LICENSE.txt" }
requires-python = ">=3.9"
authors = [
    { name = "Philippe Morissette", email = "morissette.philippe@gmail.com" },
]
keywords = [
    "python",
    "finance",
    "quant",
    "quant finance",
    "algotrading",
    "algorithmic trading",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "decorator>=5.0.7",
    "matplotlib>=1",
    "numpy",
    "pandas>=0.19",
    "scikit-learn>=0.15",
    "scipy>=0.15",
    "tabulate>=0.7.5",
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "build",
    "ruff>=0.5.0,<0.15",
    "pytest",
    "pytest-cov",
    "setuptools",
    "twine",
    "wheel",
]
test = [
    "pytest",
    "pytest-cov",
]

[project.urls]
Repository = "https://github.com/pmorissette/ffn"
Homepage = "http://pmorissette.github.io/ffn/"

[tool.ruff]
line-length = 180

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]
